--- a/Class Management/Views/AddTeacher.xaml
+++ b/Class Management/Views/AddTeacher.xaml
@@ -50,6 +50,13 @@
                 <Setter Property="Foreground" Value="White" />
             </Style>
 
+            <Style x:Key="shortcutBtn"
+                   TargetType="{x:Type Button}"
+                   BasedOn="{StaticResource MetroFlatButton}">
+                <Setter Property="Background" Value="White" />
+                <Setter Property="Foreground" Value="#3F51B5" />
+            </Style>
+
             <Style x:Key="cellsty" TargetType="DataGridCell">
                 <Setter Property="Background" Value="Transparent" />
                 <Setter Property="BorderBrush" Value="Transparent" />
@@ -140,6 +147,23 @@
                         Background="#3F51B5" Foreground="White" Grid.ColumnSpan="2"
                         HorizontalAlignment="Right" Style="{StaticResource btn}">
                     <Controls:PackIconMaterial x:Name="CloseIcon" Kind="WindowClose" Height="10" Width="10" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                </Button>
+
+                <Button x:Name="ShortcutToList"
+                        BorderBrush="White" 
+                        BorderThickness="2"
+                        Grid.Row="2"
+                        Grid.Column="1"
+                        Grid.RowSpan="4"
+                        Height="350"
+                        Width="100"
+                        HorizontalAlignment="Right"
+                        Style="{StaticResource shortcutBtn}" 
+                        Click="shortcut_Click">
+                    <StackPanel Orientation="Vertical">
+                        <Controls:PackIconMaterial HorizontalAlignment="Center" Kind="ArrowRight" Height="60" Width="30"></Controls:PackIconMaterial>
+                        <TextBlock HorizontalAlignment="Center" FontSize="20">List</TextBlock>
+                    </StackPanel>
                 </Button>
 
             </Grid>
