--- a/Class Management/MainWindow.xaml
+++ b/Class Management/MainWindow.xaml
@@ -330,8 +330,8 @@
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="0" Background="Beige">
-                    <Label FontSize="20" Foreground="#3F51B5" Margin="0 10 0 50">Here's Today's Timetable</Label>
-                    <ListBox x:Name="TodaysTimetableListBox" Margin="5"></ListBox>
+                    <Label FontSize="20" Foreground="#3F51B5" Margin="10">Here's Today's Timetable</Label>
+                    <ListBox x:Name="TodaysTimetableListBox" Margin="10 5"></ListBox>
                 </StackPanel>
                 <Grid Margin="10 100" Background="White" Grid.Column="1">
                     <Grid Margin="50">
