--- a/Class Management/MainWindow.xaml
+++ b/Class Management/MainWindow.xaml
@@ -231,14 +231,13 @@
                 </StackPanel>
             </Controls:Flyout>
             <Controls:Flyout x:Name="ToolsFlyout" Header="Tools" Position="Right" Theme="Dark" CloseButtonVisibility="Visible" Width="300" IsModal="True">
-                <Viewbox>
-                    <Grid Width="300" Height="780">
+                <StackPanel Orientation="Vertical">
+                    <!-- Subjects -->
+                    <Grid Margin="10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="50" />
                             <RowDefinition Height="150" />
                             <RowDefinition Height="50" />
-                            <RowDefinition Height="50" />
-                            <RowDefinition Height="auto" />
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="200" />
@@ -246,29 +245,39 @@
                         </Grid.ColumnDefinitions>
                         <Label x:Name="Subjects" Content="Subjects" FontSize="20" 
                                Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2"
-                               HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" />
-                        <ListBox x:Name="subject_list" Height="140" Width="250" Margin="10,10,0,0"
+                               HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,10,0,0" />
+                        <ListBox x:Name="subject_list" Height="140" Width="250" Margin="0,10,0,0"
                                  Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2"
                                  ItemsSource="{Binding subjects}" DisplayMemberPath="subject" FontSize="15"
                                  Style="{StaticResource VirtualisedMetroListBox}" SelectionChanged="subject_list_SelectionChanged">
                         </ListBox>
                         <Button x:Name="delete_subject"  Width="50" Height="25" 
                                 Grid.Column="1" Grid.Row="0" Visibility="Collapsed"
-                                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,25,0,0" 
+                                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,25,0,0" 
                                 Style="{StaticResource MetroFlatButton}" Click="change_subject_Click">
                             <Controls:PackIconMaterial x:Name="DeleteSubject" Kind="Delete" Height="15" Width="15" />
                         </Button>
-                        <TextBox x:Name="subject_textbox" Width="190" Height="25" Margin="10,10,0,0"
+                        <TextBox x:Name="subject_textbox" Width="190" Height="25" Margin="0,10,0,0"
                                  Grid.Column="0" Grid.Row="2" CharacterCasing="Upper"
                                  HorizontalAlignment="Left" VerticalAlignment="Top" />
                         <Button x:Name="add_subject"  Width="50" Height="25" 
                                 Grid.Column="1" Grid.Row="2"
-                                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" 
+                                HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,10,0,0" 
                                 Style="{StaticResource MetroFlatButton}" Click="change_subject_Click">
                             <Controls:PackIconMaterial x:Name="AddSubject" Kind="Plus" Height="15" Width="15" />
                         </Button>
                     </Grid>
-                </Viewbox>
+                    <Grid Height="2" Background="Gray"/>
+
+                    <Label Content="Utility" FontSize="20" Margin="10" />
+                    <!-- Export excel -->
+                    <Button Style="{StaticResource TransparentBtn}" Margin="10 5" BorderBrush="DarkGray" BorderThickness="1">Export data</Button>
+
+                    <!-- Work Here Sautan-->
+                    <Grid Background="Beige">
+                        <!-- Here i mean -->
+                    </Grid>
+                </StackPanel>
             </Controls:Flyout>
             <Controls:Flyout x:Name="LoginFlyout" KeyDown="LoginFlyout_KeyDown" 
                              Background="MediumSeaGreen" CloseButtonVisibility="Collapsed" 
